# 32blit-imgdec

./: .gitmodules  32blit-imgdec-config.cmake  CMakeLists.txt  imgdec.cpp  imgdec.hpp  jpeg.cpp  png.cpp
.github/workflows/: build.yml
example/: CMakeLists.txt  assets.yml  example.cpp  metadata.yml
not-duino/: Arduino.h
